# ergowallet-desktop

./: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  README.md  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.jest.json  tsconfig.json  webpack.config.js
.github/workflows/: build-tauri.yml  build.yml
.storybook/: preview.ts
resources/: icon.icns
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: address.rs  lib.rs  main.rs  mobile.rs  transaction.rs  wallet.rs
src/common/: ErgoBoxSet.spec.ts  ErgoBoxSet.ts  HdPubKey.ts  IKeyManager.ts  KeyManager.spec.ts  KeyManager.ts  Mnemomic.spec.ts  Mnemonic.ts  MoneyUnits.spec.ts  MoneyUnits.ts  SchedulerService.ts  SingleKeyManager.spec.ts  SingleKeyManager.ts  backend-types.ts  bip39.ts  constants.ts  utils.ts
src/main/: electron.ts  main-window.ts
src/main/application/: Application.ts  Application2.ts  ElectronSettings.ts  TauriSettings.ts  logger.ts  tauri.ts
src/renderer/: Backend.ts  TauriBackend.ts  backend.ts  config.ts  index.html  index.tsx  mui.ts  utils.ts
src/renderer/app/: App.tsx  MainScreen.tsx
src/renderer/components/: Address.tsx  AssetValue.tsx  CopyToClipboard.tsx  Hex.tsx  Input.tsx  Paper.tsx  ScrollToTop.tsx
src/renderer/store/: root-reducer.ts  store.ts
src/renderer/ui/: theme.tsx
src/stories/onboarding/: InitWalletParams.stories.tsx  InputMnemonic.stories.tsx  LoginScreen.stories.tsx
src/stories/wallet/: 2-Transfer.stories.tsx  (+12 more)
(+78 files in other folders)
